--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <script src="highlight.pack.js"></script>
     <script src="code.js"></script>
     <div style="display:none">
-        <script type="text/javascript" src="https://s5.cnzz.com/z_stat.php?id=1276480930&web_id=1276480930"></script>
+      <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1277869668&web_id=1277869668"></script>    
     </div>
 </body>
 
-</html>
+</html>®
