--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Model生成器</title>
+    <title>Json To Dart Model</title>
 </head>
 
 <body>
     <div class="mainContent">
         <div class="header">
             <!-- 标题 -->
-            <h1>json转Dart Model代码生成器</h1>
-            <a href="https://github.com/ashamp/jsonToDartModel/tree/gh-pages" target="_blank">查看源码</a>
+            <h1>Json To Dart Model Code Genarator</h1>
+            <a href="https://github.com/ashamp/jsonToDartModel/tree/gh-pages" target="_blank">view source</a>
         </div>
         <div class="mainContainer">
             <!-- 主容器 -->
@@ -35,7 +35,7 @@
                     <!-- Input容器 -->
                     <div class="textInputContainer">
                         <div class="inputTitle">
-                            <p>根类名:</p>
+                            <p>Root Class Name:</p>
                         </div>
                         <div class="inputContainer">
                             <input type="text" name="className" id="classNameTextField" placeholder="通常使接口名作为根类名">
@@ -50,7 +50,7 @@
                     <pre><code id="dartCode" class="objectivec"></code></pre>
                 </div>
                 <div class="copyBtnContaner">
-                    <button id="copyFileBtn" class="copyBtn">复制</button>
+                    <button id="copyFileBtn" class="copyBtn">Copy</button>
                 </div>
             </div>
         </div>
