--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mainContent">
         <div class="header">
             <!-- 标题 -->
-            <h1>Json To Dart Model Code Genarator</h1>
+            <h1>Json To Dart Model Code Generator</h1>
             <a href="https://github.com/ashamp/jsonToDartModel/tree/gh-pages" target="_blank">view source</a>
         </div>
         <div class="mainContainer">
