add option convert snake case to camel case

--- a/index.html
+++ b/index.html
@@ -34,11 +34,19 @@
                 <div class="inputsContainer">
                     <!-- Input容器 -->
                     <div class="textInputContainer">
+                      <div class="inputTitle">
+                          <p>Option:</p>
+                      </div>
+                      <div class="inputContainer">
+                          <p><input type="checkbox" name="camelCheckBox" id="camelCheckBox"> Convert snake case to camel case</p>
+                      </div>
+                  </div>
+                    <div class="textInputContainer">
                         <div class="inputTitle">
                             <p>Root Class Name:</p>
                         </div>
                         <div class="inputContainer">
-                            <input type="text" name="className" id="classNameTextField" placeholder="通常使接口名作为根类名">
+                            <input type="text" name="className" id="classNameTextField" placeholder="Typecally you can using interface name">
                         </div>
                     </div>
                 </div>
