add json key string option

--- a/index.html
+++ b/index.html
@@ -34,13 +34,23 @@
                 <div class="inputsContainer">
                     <!-- Input容器 -->
                     <div class="textInputContainer">
-                      <div class="inputTitle">
-                          <p>Option:</p>
-                      </div>
-                      <div class="inputContainer">
-                          <p><input type="checkbox" name="camelCheckBox" id="camelCheckBox"> Convert snake case to camel case</p>
-                      </div>
-                  </div>
+                        <div class="inputTitle">
+                            <p>JsonKey:</p>
+                        </div>
+                        <div class="inputContainer">
+                            <p><input type="checkbox" name="usingJsonKeyCheckBox" id="usingJsonKeyCheckBox"> Json key string</p>
+                            <p>&nbsp; | &nbsp;</p>
+                            <p><input type="checkbox" name="jsonKeyPrivateCheckBox" id="jsonKeyPrivateCheckBox"> Private</p>
+                        </div>
+                    </div>
+                    <div class="textInputContainer">
+                        <div class="inputTitle">
+                            <p>Camel Case:</p>
+                        </div>
+                        <div class="inputContainer">
+                            <p><input type="checkbox" name="camelCheckBox" id="camelCheckBox"> Convert snake case to camel case</p>
+                        </div>
+                    </div>
                     <div class="textInputContainer">
                         <div class="inputTitle">
                             <p>Root Class Name:</p>
@@ -69,7 +79,7 @@
     <script src="highlight.pack.js"></script>
     <script src="code.js"></script>
     <div style="display:none">
-      <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1277869668&web_id=1277869668"></script>    
+        <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1277869668&web_id=1277869668"></script>
     </div>
 </body>
 
