--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                     </div>
                     <div class="textInputContainer">
                         <div class="inputTitle">
+                            <p>Force String:</p>
+                        </div>
+                        <div class="inputContainer">
+                            <p><input type="checkbox" name="forceStringCheckBox" id="forceStringCheckBox"> Convert all props to String</p>
+                        </div>
+                    </div>
+                    <div class="textInputContainer">
+                        <div class="inputTitle">
                             <p>Root Class Name:</p>
                         </div>
                         <div class="inputContainer">
