--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     </div>
                     <div class="textInputContainer">
                         <div class="inputTitle">
-                            <p>Force String:</p>
+                            <p>Force String Type:</p>
                         </div>
                         <div class="inputContainer">
-                            <p><input type="checkbox" name="forceStringCheckBox" id="forceStringCheckBox"> Convert all props to String</p>
+                            <p><input type="checkbox" name="forceStringCheckBox" id="forceStringCheckBox"> Convert all props to String type (Except bool)</p>
                         </div>
                     </div>
                     <div class="textInputContainer">
