add featue:if null prop,make warning

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <h1>Json To Dart Model Code Generator</h1>
             <a href="https://github.com/ashamp/jsonToDartModel/tree/gh-pages" target="_blank">view source</a>
         </div>
+        <div class="info">
+            <!-- 提示信息 -->
+            
+        </div>
         <div class="mainContainer">
             <!-- 主容器 -->
             <div class="leftContainer">
