--- a/index.html
+++ b/index.html
@@ -6,80 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.js"></script>
     <title>Json To Dart Model</title>
 </head>
 
 <body>
-    <div class="mainContent">
-        <div class="header">
+    <div class="divContainer divContainer mainContent">
+        <div class="divContainer header">
             <!-- 标题 -->
             <h1>Json To Dart Model Code Generator</h1>
             <a href="https://github.com/ashamp/jsonToDartModel/tree/gh-pages" target="_blank">view source</a>
         </div>
-        <div class="info">
+        <div class="divContainer info">
             <!-- 提示信息 -->
-            
+
         </div>
-        <div class="mainContainer">
+        <div class="divContainer mainContainer">
             <!-- 主容器 -->
-            <div class="leftContainer">
+            <div class="divContainer leftContainer">
                 <!-- 左容器 -->
-                <div class="jsonContainer">
+                <div class="divContainer jsonContainer">
                     <!-- json容器 -->
                     <div class="origJsonContainer">
                         <!-- 原始json -->
-                        <textarea name="origJsonTextarea" id="origJsonTextarea"></textarea>
-                    </div>
-                    <div class="formatedJsonContainer">
-                        <!-- 格式化的json -->
-                        <pre><code id="formatedJson" class="json"></code></pre>
+                        <!-- <textarea name="origJsonTextarea" id="origJsonTextarea"></textarea> -->
+                        <div id="origJsonContainer" style="height: 100%"></div>
                     </div>
                 </div>
-                <div class="inputsContainer">
+                <div class="divContainer inputsContainer">
                     <!-- Input容器 -->
-                    <div class="textInputContainer">
-                        <div class="inputTitle">
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>JsonKey:</p>
                         </div>
-                        <div class="inputContainer">
+                        <div class="divContainer inputContainer">
                             <p><input type="checkbox" name="usingJsonKeyCheckBox" id="usingJsonKeyCheckBox"> Json key string</p>
                             <p>&nbsp; | &nbsp;</p>
                             <p><input type="checkbox" name="jsonKeyPrivateCheckBox" id="jsonKeyPrivateCheckBox"> Private</p>
                         </div>
                     </div>
-                    <div class="textInputContainer">
-                        <div class="inputTitle">
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>Camel Case:</p>
                         </div>
-                        <div class="inputContainer">
+                        <div class="divContainer inputContainer">
                             <p><input type="checkbox" name="camelCheckBox" id="camelCheckBox"> Convert snake case to camel case</p>
                         </div>
                     </div>
-                    <div class="textInputContainer">
-                        <div class="inputTitle">
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>Force String Type:</p>
                         </div>
-                        <div class="inputContainer">
+                        <div class="divContainer inputContainer">
                             <p><input type="checkbox" name="forceStringCheckBox" id="forceStringCheckBox"> Convert all props to String type (Except bool)</p>
                         </div>
                     </div>
-                    <div class="textInputContainer">
-                        <div class="inputTitle">
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>Root Class Name:</p>
                         </div>
-                        <div class="inputContainer">
+                        <div class="divContainer inputContainer">
                             <input type="text" name="className" id="classNameTextField" placeholder="Typecally you can using interface name">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rightContainer">
+            <div class="divContainer rightContainer">
                 <!-- 右容器 -->
-                <div class="objcHeader">
+                <div class="divContainer objcHeader">
                     <!-- 头文件 -->
                     <pre><code id="dartCode" class="objectivec"></code></pre>
                 </div>
-                <div class="copyBtnContaner">
+                <div class="divContainer copyBtnContaner">
                     <button id="copyFileBtn" class="copyBtn">Copy</button>
                 </div>
             </div>
