--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.js"></script>
