--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                             <input type="text" name="className" id="classNameTextField" placeholder="Typecally you can using interface name">
                         </div>
                     </div>
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
+                            <p>File Name:</p>
+                        </div>
+                        <div class="divContainer inputContainer">
+                            <input type="text" name="className" disabled id="fileNameTextField" placeholder="Auto generated snake case file name">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="divContainer rightContainer">
