--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                     </div>
                     <div class="divContainer textInputContainer">
                         <div class="divContainer inputTitle">
+                            <p>Fault tolerance:</p>
+                        </div>
+                        <div class="divContainer inputContainer">
+                            <p><input type="checkbox" name="faultToleranceCheckBox" id="faultToleranceCheckBox"> Fault tolerance for JSON with mismatched data types</p>
+                        </div>
+                    </div>
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>Force String Type:</p>
                         </div>
                         <div class="divContainer inputContainer">
