Store Original Json

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                     </div>
                     <div class="divContainer textInputContainer">
                         <div class="divContainer inputTitle">
+                            <p>Store Original Json:</p>
+                        </div>
+                        <div class="divContainer inputContainer">
+                            <p><input type="checkbox" name="origJsonCheckBox" id="origJsonCheckBox"> Enable store original Json</p>
+                        </div>
+                    </div>
+                    <div class="divContainer textInputContainer">
+                        <div class="divContainer inputTitle">
                             <p>Root Class Name:</p>
                         </div>
                         <div class="divContainer inputContainer">
