--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/jsoneditor/7.0.4/jsoneditor.min.js"></script>
+    <link href="https://cdn.bootcdn.net/ajax/libs/jsoneditor/9.5.3/jsoneditor.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jsoneditor/9.5.3/jsoneditor.min.js"></script>
     <title>Json To Dart Model</title>
 </head>
 
