--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/default.css">
     <link href="jsoneditor.min.css" rel="stylesheet">
-    <script src="jsoneditor.min.js"></script>
+    
     <title>Json To Dart Model</title>
 </head>
 
@@ -117,9 +118,9 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.bootcss.com/jquery/1.7.2/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <link rel="stylesheet" href="styles/default.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.5.3/jsoneditor.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="highlight.pack.js"></script>
     <script src="code.js"></script>
     <div style="display:none">
