--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" href="styles.css">
-    <link href="jsoneditor.min.css" rel="stylesheet">
-    <script src="jsoneditor.min.js"></script>
     <title>Json To Dart Model</title>
 </head>
 
@@ -117,6 +115,8 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.7.0/jsoneditor.min.js" integrity="sha512-T9isxS19cp5TyUWFgUh67kjuTcafB/OyIxav2G1whJda6cmiGidGtqZUl1Iep+Hs6tS8kvl5c+MT4xfWuUUv0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.7.0/jsoneditor.css" integrity="sha512-+dwBKGKkHTEGq+HPC9veK/RMCoS7iHZPy337aQsm2iiz0nSm5yp6WkbK7+UjlTTlCADz9hliigkfmq9fhf29Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link rel="stylesheet" href="styles/default.css">
